--- a/grails-app/TODO
+++ b/grails-app/TODO
@@ -1,6 +1,6 @@
 v1.0
 TODO: wire up to rds/mysql database (done, dev environment on RESTService connects to RDS)
-TODO: healthcheck page that touches the database and returns 500
+TODO: healthcheck page that touches the database and returns 500 (done, healthcheck created as domain class, maybe not the best implementation)
 TODO: send additional metadata in the response, like AZ
 TODO: additional methods like POST, DELETE
 TODO: relational model that mimics a travel record with a passenger, hotel, air, car
